Social icons widget alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -880,8 +880,9 @@ hr.line {
 
 .widget.socialicons a, .widget.profile .bk-profile-socialicons a {
     text-decoration: none;
-    text-indent: -9999px;
+    text-indent: 9999px;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .widget.profile .bk-profile-socialicons span {
